<resources>
    <string name="app_name">TrabalhoFinal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Início</string>
    <string name="menu_categoria">Categorias</string>
    <string name="menu_entrada">Entradas</string>
    <string name="menu_saida">Saidas</string>
    <string name="menu_integracaobancaria">Integração Bancária</string>
</resources>